--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -2,6 +2,7 @@ site_name: CLW Documentation
 
 pages:
 - ['index.md', 'Home']
-- ['installguide/adminserver/graphite.md', 'Admin Server', 'Graphite']
 - ['installguide/adminserver/elasticsearch.md', 'Admin Server', 'ElasticSearch']
+- ['installguide/adminserver/graphite.md', 'Admin Server', 'Graphite']
 - ['installguide/adminserver/jenkins.md', 'Admin Server', 'Jenkins']
+- ['installguide/adminserver/zabbix.md', 'Admin Server', 'Zabbix']
