--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -4,6 +4,7 @@ theme: mkdocs
 pages:
 - ['index.md', 'Home']
 - ['installguide/adminserver/clwrepo.md', 'Admin Server', 'CLW-repo']
+- ['installguide/adminserver/clwrepo2.md', 'Admin Server', 'CLW-repo2']
 - ['installguide/adminserver/elasticsearch.md', 'Admin Server', 'ElasticSearch']
 - ['installguide/adminserver/graphite.md', 'Admin Server', 'Graphite']
 - ['installguide/adminserver/jenkins.md', 'Admin Server', 'Jenkins']
