--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -6,6 +6,7 @@ pages:
 - ['installguide/adminserver/clwrepo.md', 'Admin Server', 'CLW-repo']
 - ['installguide/adminserver/elasticsearch.md', 'Admin Server', 'ElasticSearch']
 - ['installguide/adminserver/graphite.md', 'Admin Server', 'Graphite']
+- ['installguide/adminserver/icinga2.md', 'Admin Server', 'Icinga2']
 - ['installguide/adminserver/jenkins.md', 'Admin Server', 'Jenkins']
 - ['installguide/adminserver/ocs.md', 'Admin Server', 'OCS Inventory']
 - ['installguide/adminserver/zabbix.md', 'Admin Server', 'Zabbix']
